--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pai-example",
-  "version": "0.0.0",
+  "version": "1.0.0",
+  "author": {"name": "Mor GUEYE", "email": "gueyemor2009@gmail.com"},
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -8,7 +9,6 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
     "@angular/common": "~12.2.0",
@@ -36,5 +36,6 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.5"
-  }
+  },
+  "license": "Apache-2.0"
 }
